@@ -1,5 +1,12 @@
 2006-05-21  Brian Warner  <warner@lothar.com>
 
+	* buildbot/process/process_twisted.py
+	(QuickTwistedBuildFactory.__init__): recent versions of Twisted
+	changed the build process. The new setup.py no longer takes the
+	'all' argument.
+	(FullTwistedBuildFactory.__init__): same
+	(TwistedReactorsBuildFactory.__init__): same
+
 	* contrib/hg_buildbot.py: wrote a commit script for mercurial, to
 	be placed in the [hooks] section of the central repository (the
 	one that everybody pushes changes to).
